Edit title of index.html & name of manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "porfolio_flutter_app_and_website",
-  "short_name": "porfolio_flutter_app_and_website",
+  "name": "Flutter & desktop developer With Messaoud Benkouider",
+  "short_name": "Flutter & desktop developer With Messaoud Benkouider",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
